--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = ">=3.9,<3.13"
 PySide6 = "6.9.0"
 
 fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
+moviepy = "^2.1.2"
 
 
 
