--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 PySide6 = "6.9.0"
+requests = "^2.31"
+python-whois = "^0.9.5"
+scapy = "^2.5.0"
+nslookup = "^1.3.0"
 
 fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
 moviepy = "^2.1.2"
