--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ packages = [
 ]
 
 include = [
-    "fit_assets/icons/info-circle.png"
+    "fit_assets/icons/info-circle.png",
+    "fit_assets/templates/*.html",
+    "fit_assets/images/logo-640x640.png"
 ]
 
 [tool.poetry.dependencies]
@@ -19,11 +21,13 @@ requests = "^2.31"
 python-whois = "^0.9.5"
 scapy = "^2.5.0"
 nslookup = "^1.3.0"
-
-fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
+xhtml2pdf = "^0.2.17"
+pypdf2 = "^3.0.1"
+jinja2 = "^3.1.6"
 moviepy = "^2.1.2"
 
-
+fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
+fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
 
 
 [build-system]
