--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ moviepy = "^2.1.2"
 
 fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
 fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
+rfc3161ng = "^2.1.3"
 
 
 [build-system]
