--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fit-acquisition"
-version = "1.0.8"
+version = "1.0.9"
 description = "Utilities and base classes for content acquisition, shared across FIT scraper modules."
 authors = ["FIT Project"]
 license = "LGPL-3.0-or-later"
@@ -29,6 +29,8 @@ rfc3161ng = "^2.1.3"
 
 fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
 fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
+pytest = "^8.4.1"
+pytest-qt = "^4.5.0"
 
 
 
