--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ python-whois = "^0.9.5"
 scapy = "^2.5.0"
 nslookup = "^1.3.0"
 xhtml2pdf = "^0.2.17"
-pypdf2 = "^3.0.1"
 jinja2 = "^3.1.6"
 moviepy = "^2.1.2"
 rfc3161ng = "^2.1.3"
@@ -31,6 +30,7 @@ fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
 fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
 pytest = "^8.4.1"
 pytest-qt = "^4.5.0"
+pypdf = "^5.8.0"
 
 
 
