--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,8 +38,8 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "ms-python.black-formatter",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-    "source.fixAll": true
+    "source.organizeImports": "explicit",
+    "source.fixAll": "explicit"
   }
 },
 "ruff.enable": true
