--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.11,<3.13"
 PySide6 = "6.9.0"
 requests = "^2.31"
 python-whois = "^0.9.5"
@@ -27,7 +27,7 @@ moviepy = "^2.1.2"
 rfc3161ng = "^2.1.3"
 pytest = "^8.4.1"
 pytest-qt = "^4.5.0"
-pypdf = "^5.8.0"
+pypdf = ">=5.8.0,<7.0.0"
 
 fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
 
