build(poetry): exclude UI and test modules from package discovery
Add an `exclude` rule in `pyproject.toml` to prevent `fit_acquisition/ui/**` and `fit_acquisition/tests/**` from being included in package discovery/distribution.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [
     { include = "fit_acquisition" }
 ]
 
+exclude = ["fit_acquisition/ui/**", "fit_acquisition/tests/**"]
+
 include = [
     "fit_assets/icons/info-circle.png",
     "fit_assets/templates/*.html",
